# sql_practice

./: main.py  main.sql  main2.py  main2.sql  main3.py  main3.sql  main4.py  main4.sql  main5.py  main5.sql  main6.py  main6.sql  main7.py  main7.sql  main8.py  main8.sql  pyproject.toml  seed.sql  seed2.sql  seed3.sql  seed4.sql  seed5.sql  seed6.sql  seed7.sql  seed8.sql  setup.sql  setup2.sql  setup3.sql  setup4.sql  setup5.sql  setup6.sql  setup7.sql  setup8.sql
