[project]
name = "1229"
version = "0.1.0"
description = ""
authors = [
    {name = "tanaka",email = "yuina.tnk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
